--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,11 +28,9 @@ set( CMAKE_BIULD_TYPE Debug )
 set( CMAKE_CXX_STANDARD 11 )
 
 project( "MinimalSerialMonitor" )
-#set( CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_NAME}/" )
 
-#set flags
-#set( MONO 0 )
-#set( RELEASE 0 )
+set( WXWIDGETS_VERSION_IN_HOME_DIR "wxWidgets-3.1.4" )
+set( RELEASE 1 )
 
 message( "CXX Compiler: ${CMAKE_CXX_COMPILER}" )
 message( "CXX Compiler ID: ${CMAKE_CXX_COMPILER_ID}" )
@@ -40,9 +38,12 @@ message( "CXX Compiler is GNU: ${CMAKE_COMPILER_IS_GNUCXX}" )
 
 if( WIN32 )
     message( "Target: Windows32" )
+    if( RELEASE )
+        set( CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_NAME}/" )
+    endif()
     #MONOLITHIC compiled value
     #directory where wxwidget is located root folder
-    set( wxWidgets_BASE_DIR_WIN "C:/Users/lucak/wxWidgets-3.1.4" )
+    set( wxWidgets_BASE_DIR_WIN "C:/Users/$ENV{username}/${WXWIDGETS_VERSION_IN_HOME_DIR}" )
     include_directories( 
         includes
         "${wxWidgets_BASE_DIR_WIN}/include/"
@@ -97,7 +98,7 @@ if( WIN32 )
 elseif( CMAKE_SYSTEM_NAME STREQUAL "Linux" )
     message( "Target: Linux" )
     #directory where wxwidget is located root folder
-    set( wxWidgets_ROOT_DIR "/home/pi/wxWidgets-3.1.4" )
+    set( wxWidgets_ROOT_DIR "$ENV{HOME}/${WXWIDGETS_VERSION_IN_HOME_DIR}" )
     set( wxWidgets_CONFIG_EXECUTABLE "${wxWidgets_ROOT_DIR}/gtkbuild/wx-config" )
 
     if( RELEASE )
@@ -106,7 +107,7 @@ elseif( CMAKE_SYSTEM_NAME STREQUAL "Linux" )
 elseif( APPLE )
     message( "Target: Apple" )
     #directory where wxwidget is located root folder
-	set( wxWidgets_ROOT_DIR "/Users/lucakleinschmidt/wxWidgets-3.1.4" )
+	set( wxWidgets_ROOT_DIR "$ENV{HOME}/${WXWIDGETS_VERSION_IN_HOME_DIR}" )
 	set( wxWidgets_CONFIG_EXECUTABLE "${wxWidgets_ROOT_DIR}/macbuild/wx-config" )
 endif()
 
@@ -168,12 +169,12 @@ if( APPLE )
         MACOSX_BUNDLE_ICON_FILE AppIcon.icns
         MACOSX_BUNDLE_COPYRIGHT "Copyright fidoriel 2020"
         MACOSX_BUNDLE_GUI_IDENTIFIER "${PROJECT_NAME}"
-         )
+        )
     add_custom_command( 
         TARGET ${PROJECT_NAME}
         POST_BUILD
         COMMAND plutil -replace NSHighResolutionCapable -bool true ${PROJECT_NAME}.app/Contents/Info.plist
-         )
+        )
 elseif( CMAKE_SYSTEM_NAME STREQUAL "Linux" AND RELEASE )
     EXECUTE_PROCESS( COMMAND uname -m COMMAND tr -d '\n' OUTPUT_VARIABLE ARCHITECTURE )
     message( STATUS "Architecture: ${ARCHITECTURE}" )
@@ -191,6 +192,8 @@ elseif( CMAKE_SYSTEM_NAME STREQUAL "Linux" AND RELEASE )
     add_custom_command(
         TARGET ${PROJECT_NAME}
         POST_BUILD
+        COMMAND mkdir -p "AppDir/usr/share/"
+        COMMAND mkdir -p "AppDir/usr/share/icons"
         COMMAND wget -N https://github.com/AppImage/AppImageKit/releases/download/continuous/${AppImageRelease}
         COMMAND chmod a+x ${AppImageRelease}
         COMMAND cp ../icons/AppIcon.png AppDir/AppIcon.png
@@ -208,5 +211,5 @@ elseif( CMAKE_SYSTEM_NAME STREQUAL "Linux" AND RELEASE )
         COMMAND gcc AppRun.c -o AppDir/AppRun
 
         COMMAND ./${AppImageRelease} AppDir
-	)
+	    )
 endif()
